--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+11/2017 - DEPRICATED
+
+This project has been abandoned. Eagle now supports much richer format files that work significantly better with version control.
+
 Repository for Cadsoft Eagle library files
